--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "npm install --omit=dev",
     "dev": "nodemon app.js"
   },
   "type": "module",
