--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
