--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
     "build": "npm install --omit=dev",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "type": "module",
   "keywords": [],
