--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "npm install --omit=dev",
-    "start": "node app.js"
+    "start": "node -r dotenv/config app.js"
   },
   "type": "module",
   "keywords": [],
