--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_URL=mongodb+srv://aswinnadh9803:aswinspy9803@cluster0.vvq7h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NODE_ENV=production
